# liv_dem

./: .gitignore  Building_an_AI,_Live__Beyond_the_Magic (1).pptx  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.txt
src/: fetch.py  infer.py  prepare.py  train.py  train_scratch.py  ui.py
