[project]
name = "live-dem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.19.0",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
